--- a/part7/extending-the-bloglist/bloglist-frontend/package.json
+++ b/part7/extending-the-bloglist/bloglist-frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -48,6 +49,7 @@
     "@testing-library/react": "^12.1.2",
     "cypress": "^9.1.1",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jest": "^24.7.0"
+    "eslint-plugin-jest": "^24.7.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
